--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.13'
         def nav_version = "2.5.0"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
