--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,20 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.13'
-        def nav_version = "2.5.0"
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        classpath 'com.google.gms:google-services:4.4.0' // Daha yeni sürüm
+        def nav_version = "2.7.5" // Navigation component güncellendi
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9' // Crashlytics güncellendi
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
+
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.android.application' version '8.2.2' apply false
+    id 'com.android.library' version '8.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
 }
 
 task clean(type: Delete) {
